--- a/eventHandler-app/src/app/about/about.component.html
+++ b/eventHandler-app/src/app/about/about.component.html
@@ -1,9 +1,387 @@
-<mat-grid-list cols="4" rowHeight="100px">
-  <mat-grid-tile
-      *ngFor="let tile of tiles"
-      [colspan]="tile.cols"
-      [rowspan]="tile.rows"
-      [style.background]="tile.color">
-    {{tile.text}}
-  </mat-grid-tile>
-</mat-grid-list>
+<div class="d-flex h-100 text-center text-white bg-dark bodyperso">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+      <div>
+        <h3 class="float-md-start mb-0">Cover</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Contact</a>
+        </nav>
+      </div>
+    </header>
+
+    <main class="px-3">
+      <h1>Cover your page.</h1>
+      <p class="lead">
+        Cover is a one-page template for building simple and beautiful home
+        pages. Download, edit the text, and add your own fullscreen background
+        photo to make it your own.
+      </p>
+      <p class="lead">
+        <a
+          href="#"
+          class="btn btn-lg btn-secondary fw-bold border-white bg-white"
+          >Learn more</a
+        >
+      </p>
+    </main>
+
+    <footer class="mt-auto text-white-50">
+      <p>
+        Cover template for
+        <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by
+        <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.
+      </p>
+    </footer>
+  </div>
+</div>
+<div class="container col-xxl-8 px-4 py-5">
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="col-10 col-sm-8 col-lg-6">
+      <img
+        src="../../assets/images/about/bootstrap-themes.png"
+        class="d-block mx-lg-auto img-fluid"
+        alt="Bootstrap Themes"
+        width="700"
+        height="500"
+        loading="lazy"
+      />
+    </div>
+    <div class="col-lg-6">
+      <h1 class="display-5 fw-bold lh-1 mb-3">
+        Responsive left-aligned hero with image
+      </h1>
+      <p class="lead">
+        Quickly design and customize responsive mobile-first sites with
+        Bootstrap, the world’s most popular front-end open source toolkit,
+        featuring Sass variables and mixins, responsive grid system, extensive
+        prebuilt components, and powerful JavaScript plugins.
+      </p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
+          Primary
+        </button>
+        <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+          Default
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="headlineperso">
+  <div
+    class="
+      position-relative
+      overflow-hidden
+      p-3 p-md-5
+      m-md-3
+      text-center
+      bg-light
+    "
+  >
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+      <h1 class="display-4 fw-normal">Punny headline</h1>
+      <p class="lead fw-normal">
+        And an even wittier subheading to boot. Jumpstart your marketing efforts
+        with this example based on Apple’s marketing pages.
+      </p>
+      <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+    </div>
+    <div class="product-device shadow-sm d-none d-md-block"></div>
+    <div
+      class="product-device product-device-2 shadow-sm d-none d-md-block"
+    ></div>
+  </div>
+
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    <div
+      class="
+        bg-dark
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center text-white
+        overflow-hidden
+      "
+    >
+      <div class="my-3 py-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-light shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+    <div
+      class="
+        bg-light
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center
+        overflow-hidden
+      "
+    >
+      <div class="my-3 p-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-dark shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+  </div>
+
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    <div
+      class="
+        bg-light
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center
+        overflow-hidden
+      "
+    >
+      <div class="my-3 p-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-dark shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+    <div
+      class="
+        bg-primary
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center text-white
+        overflow-hidden
+      "
+    >
+      <div class="my-3 py-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-light shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+  </div>
+
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    <div
+      class="
+        bg-light
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center
+        overflow-hidden
+      "
+    >
+      <div class="my-3 p-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-body shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+    <div
+      class="
+        bg-light
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center
+        overflow-hidden
+      "
+    >
+      <div class="my-3 py-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-body shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+  </div>
+
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    <div
+      class="
+        bg-light
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center
+        overflow-hidden
+      "
+    >
+      <div class="my-3 p-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-body shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+    <div
+      class="
+        bg-light
+        me-md-3
+        pt-3
+        px-3
+        pt-md-5
+        px-md-5
+        text-center
+        overflow-hidden
+      "
+    >
+      <div class="my-3 py-3">
+        <h2 class="display-5">Another headline</h2>
+        <p class="lead">And an even wittier subheading.</p>
+      </div>
+      <div
+        class="bg-body shadow-sm mx-auto"
+        style="width: 80%; height: 300px; border-radius: 21px 21px 0 0"
+      ></div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <footer class="py-5">
+    <div class="row">
+      <div class="col-2">
+        <h3>Section</h3>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Home</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Features</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Pricing</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">FAQs</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">About</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-2">
+        <h3>Section</h3>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Home</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Features</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Pricing</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">FAQs</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">About</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-2">
+        <h3>Section</h3>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Home</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Features</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">Pricing</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">FAQs</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link p-0 text-muted">About</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-4 offset-1">
+        <form>
+          <h3>Subscribe to our newsletter</h3>
+          <p>Monthly digest of whats new and exciting from us.</p>
+          <div class="d-flex w-100 gap-2">
+            <label for="newsletter1" class="visually-hidden"
+              >Email address</label
+            >
+            <input
+              id="newsletter1"
+              type="text"
+              class="form-control"
+              placeholder="Email address"
+            />
+            <button class="btn btn-primary" type="button">Subscribe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-between py-4 my-4 border-top">
+      <p>&copy; 2021 Company, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3">
+          <a class="link-dark" href="#"
+            ><svg class="bi" width="24" height="24">
+              <use xlink:href="#twitter" /></svg
+          ></a>
+        </li>
+        <li class="ms-3">
+          <a class="link-dark" href="#"
+            ><svg class="bi" width="24" height="24">
+              <use xlink:href="#instagram" /></svg
+          ></a>
+        </li>
+        <li class="ms-3">
+          <a class="link-dark" href="#"
+            ><svg class="bi" width="24" height="24">
+              <use xlink:href="#facebook" /></svg
+          ></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</div>
