--- a/eventHandler-app/src/app/about/about.component.html
+++ b/eventHandler-app/src/app/about/about.component.html
@@ -1,46 +1,37 @@
-<div class="d-flex h-100 text-center text-white bg-dark bodyperso">
+<div class="d-flex h-100 text-center text-white bodyperso">
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
-        <h3 class="float-md-start mb-0">Cover</h3>
+        <h1 class="float-md-start mb-0">
+          {{title}}
+        </h1>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Contact</a>
+          <a mat-flat-button class="nav-link active" aria-current="page" href="#">Home</a>
+          <a mat-flat-button class="nav-link" href="#">Features</a>
+          <a mat-flat-button class="nav-link" href="#">Contact</a>
         </nav>
       </div>
     </header>
 
     <main class="px-3">
-      <h1>Cover your page.</h1>
+      <h1>Your dream come true</h1>
       <p class="lead">
-        Cover is a one-page template for building simple and beautiful home
-        pages. Download, edit the text, and add your own fullscreen background
-        photo to make it your own.
+        event handler, calculates all expenses for an event. Organizes everything you need to do.
+You can choose from the selected providers.
       </p>
       <p class="lead">
-        <a
-          href="#"
-          class="btn btn-lg btn-secondary fw-bold border-white bg-white"
-          >Learn more</a
-        >
+        <button mat-button>
+          <mat-icon>swipe_up</mat-icon> Swipe UP to continue
+        </button>
       </p>
     </main>
-
-    <footer class="mt-auto text-white-50">
-      <p>
-        Cover template for
-        <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by
-        <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.
-      </p>
-    </footer>
   </div>
 </div>
 <div class="container col-xxl-8 px-4 py-5">
   <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
     <div class="col-10 col-sm-8 col-lg-6">
       <img
-        src="../../assets/images/about/bootstrap-themes.png"
+        src="../../assets/images/about/jonathan-borba-jRb4Gvbs2gQ-unsplash.jpg"
         class="d-block mx-lg-auto img-fluid"
         alt="Bootstrap Themes"
         width="700"
@@ -50,20 +41,14 @@
     </div>
     <div class="col-lg-6">
       <h1 class="display-5 fw-bold lh-1 mb-3">
-        Responsive left-aligned hero with image
+        Each event is unique
       </h1>
       <p class="lead">
-        Quickly design and customize responsive mobile-first sites with
-        Bootstrap, the world’s most popular front-end open source toolkit,
-        featuring Sass variables and mixins, responsive grid system, extensive
-        prebuilt components, and powerful JavaScript plugins.
+        let's start filling out each form and we will give everything you would need to do it.
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-        <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">
-          Primary
-        </button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-          Default
+        <button mat-raised-button>
+          <mat-icon>next_plan</mat-icon> Start
         </button>
       </div>
     </div>
@@ -81,12 +66,18 @@
     "
   >
     <div class="col-md-5 p-lg-5 mx-auto my-5">
-      <h1 class="display-4 fw-normal">Punny headline</h1>
+      <h1 class="display-4 fw-normal">what do you want to do?</h1>
       <p class="lead fw-normal">
-        And an even wittier subheading to boot. Jumpstart your marketing efforts
-        with this example based on Apple’s marketing pages.
+        choose our option in the list
       </p>
-      <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+      <mat-form-field appearance="fill">
+        <mat-label>Event</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let event of events" [value]="event">
+            {{event}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div
